--- a/transform/styles.css
+++ b/transform/styles.css
@@ -8,6 +8,13 @@ body {
     align-items: center;
 }
 
+/* Gradient Background */
+.gradient-background {
+    background: linear-gradient(to top right, #000000, #1a1a1a, #333333, #4d4d4d);
+    color: white;
+    
+}
+
 /* Themes */
 .dark-theme {
     background-color: #121212;
@@ -50,10 +57,16 @@ main {
 
 .intro-content {
     display: flex;
-    flex: 1;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap: 2rem; /* Add space between the text and image */
+    gap: 2rem;
+}
+
+@media(min-width: 768px) {
+    .intro-content {
+        flex-direction: row;
+    }
 }
 
 .text {
@@ -66,7 +79,24 @@ main {
 }
 
 .text h2 {
-    color: #ffdd57; /* Change heading color */
+    color: #ffdd57;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.text p, .text ul {
+    font-size: 1.25rem;
+    line-height: 1.6;
+}
+
+.text ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.text ul li {
+    margin-bottom: 0.5rem;
 }
 
 .image {
@@ -95,6 +125,7 @@ main {
 .services ul {
     list-style-type: disc;
     margin-left: 2rem;
+    color: #ffffff;
 }
 
 .services ul li {
